Deploy worker too

--- a/roles/lava-worker/templates/lava-worker.j2
+++ b/roles/lava-worker/templates/lava-worker.j2
@@ -1,4 +1,4 @@
-# Configuration for lava-slave daemon
+# Configuration for lava-worker daemon
 
 # URL to the master and the logger
 MASTER_URL="tcp://{{ lava_master_host_ip }}:{{ lava_master_port }}"
